[package]
name = "uniswap-v3-sdk"
version = "3.5.0"
edition = "2021"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "Uniswap V3 SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs"
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
keywords = ["uniswap-v3", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloy = { version = "0.11", optional = true, features = [
    "contract",
    "reqwest-rustls-tls",
], default-features = false }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
anyhow = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
bigdecimal = "0.4.7"
derive_more = { version = "1.0.0", features = ["deref", "from"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
once_cell = "1.20"
regex = { version = "1.11", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "2", default-features = false }
uniswap-lens = { version = "0.11", optional = true, git="https://github.com/v3xlabs/uniswap-lens-rs" }
uniswap-sdk-core = "3.4.0"

[features]
default = []
extensions = [
    "alloy",
    "anyhow",
    "base64",
    "regex",
    "serde_json",
    "uniswap-lens",
]
std = [
    "alloy?/std",
    "thiserror/std",
    "uniswap-sdk-core/std",
    "uniswap-lens?/std",
]


[dev-dependencies]
alloy = { version = "0.11", features = [
    "provider-anvil-node",
    "signer-local",
    "reqwest-rustls-tls",
], default-features = false }
criterion = "0.5.1"
dotenv = "0.15.0"
tokio = { version = "1.43", features = ["full"] }
uniswap_v3_math = { version = "0.5.3", git = "https://github.com/v3xlabs/uniswap-v3-math" }

[[bench]]
name = "bit_math"
harness = false

[[bench]]
name = "sqrt_price_math"
harness = false

[[bench]]
name = "swap_math"
harness = false

[[bench]]
name = "tick_math"
harness = false

[[example]]
name = "from_pool_key_with_tick_data_provider"
required-features = ["extensions"]

[[example]]
name = "swap_router"
required-features = ["extensions"]

[[example]]
name = "self_permit"
required-features = ["extensions"]

[[example]]
name = "nonfungible_position_manager"
required-features = ["extensions"]
